--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <img src="/images/cousteau.png" alt="Кусто" class="profile__photo">
             <div class="profile__info">
                <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button class="profile__button profile__open-popup"></button>
+                <button type="button" class="profile__button profile__open-popup"></button>
                 <p class="profile__subtitle">Исследователь океана</p>  
             </div>
         </div>
-            <button class="profile__add-button"></button>
+            <button type="button" class="profile__add-button"></button>
         </section>
         <section class="mesto-elements">
         <ul class="elements">
@@ -78,11 +78,11 @@
         <div class="popup__container">    
           <img src="/images/Close Icon.svg" alt="закрыть окно" class="popup__close">      
           <h2 class="popup__title">Редактировать профиль</h2>
-          <fieldset class="popup__info profile__info">
-          <input type="text" placeholder="Жак-Ив Кусто" class="popup__input popup__input-name profile__name">
-          <input type="text" placeholder="Исследователь океана" class="popup__input popup__input-job profile__job">
-        </fieldset>
-          <button class="popup__button">Сохранить</button>
+          <form class="popup__info" name="popup__info">
+          <input type="text" placeholder="Жак-Ив Кусто" class="popup__input popup__input-name" name="profile__name">
+          <input type="text" placeholder="Исследователь океана" class="popup__input popup__input-job" name="profile__job">
+          <button class="popup__button" type="submit">Сохранить</button>
+        </form>
         </div>
       </section>  
   <footer class="footer">
