--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </ul>
         </section>
     </main>
-    <section class="popup popup__opened">        
+    <section class="popup">        
         <div class="popup__container">    
           <img src="/images/Close Icon.svg" alt="закрыть окно" class="popup__close">      
           <h2 class="popup__title">Редактировать профиль</h2>
