--- a/index.html
+++ b/index.html
@@ -3,90 +3,96 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto</title>
   </head>
   <body class="page">
     <header class="header">
-        <img src="/images/logo.svg" alt="логотип сайта" class="header__logo">
+      <img src="/images/logo.svg" alt="логотип сайта" class="header__logo">
     </header>
     <main class="content">
-        <section class="profile">
-            <div class="profile__info-container">
-            <img src="/images/cousteau.png" alt="Кусто" class="profile__photo">
-            <div class="profile__info">
-               <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button type="button" class="profile__button profile__open-popup"></button>
-                <p class="profile__subtitle">Исследователь океана</p>  
-            </div>
+      <section class="profile">
+        <div class="profile__info-container">
+          <img src="/images/cousteau.png" alt="Кусто" class="profile__photo">
+          <div class="profile__info">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button type="button" class="profile__button profile__open-popup"></button>
+            <p class="profile__subtitle">Исследователь океана</p>
+          </div>
         </div>
-            <button type="button" class="profile__add-button"></button>
-        </section>
-        <section class="mesto-elements">
+        <button type="button" class="profile__add-button"></button>
+      </section>
+      <section class="mesto-elements">
         <ul class="elements">
-            <li class="element">
-                <img src="/images/karachayevsk.png" alt="Карачаевск" class="element__image">
-                <div class="element__content">
-                    <h2 class="element__title">Карачаевск</h2>
-                    <button 
-                    <img src="/images/Group.svg"  
-                    alt="кнопка лайк"
-                    class="element__like">
-                </button>
-                </div>
-            </li>
-            <li class="element">
-                <img src="/images/gora_elbrus.png" alt="Гора Эльбрус" class="element__image">
-                <div class="element__content">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <button class="element__like"></button>
-                </div>
-            </li>
-            <li class="element">
-                <img src="/images/dombai.png" alt="Домбай" class="element__image">
-                <div class="element__content">
-                    <h2 class="element__title">Домбай</h2>
-                    <button class="element__like"></button>
-                </div>
-            </li>
-            <li class="element">
-                <img src="/images/Ruskeala.png" alt="Рускеала" class="element__image">
-                <div class="element__content">
-                    <h2 class="element__title">Рускеала</h2>
-                    <button class="element__like"></button>
-                </div>
-            </li>
-            <li class="element">
-                <img src="/images/Kamchatka.png" alt="Камчатка" class="element__image">
-                <div class="element__content">
-                    <h2 class="element__title">Камчатка</h2>
-                    <button class="element__like"></button>
-                </div>
-            </li>
-            <li class="element">
-                <img src="/images/vladivostok.png" alt="Владивосток" class="element__image">
-                <div class="element__content">
-                    <h2 class="element__title">Владивосток</h2>
-                    <button class="element__like"></button>
-                </div>
-            </li>
+          <li class="element">
+            <img src="/images/karachayevsk.png" alt="Карачаевск" class="element__image">
+            <div class="element__content">
+              <h2 class="element__title">Карачаевск</h2>
+              <button <img src="/images/Group.svg" alt="кнопка лайк" class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="/images/gora_elbrus.png" alt="Гора Эльбрус" class="element__image">
+            <div class="element__content">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="/images/dombai.png" alt="Домбай" class="element__image">
+            <div class="element__content">
+              <h2 class="element__title">Домбай</h2>
+              <button class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="/images/Ruskeala.png" alt="Рускеала" class="element__image">
+            <div class="element__content">
+              <h2 class="element__title">Рускеала</h2>
+              <button class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="/images/Kamchatka.png" alt="Камчатка" class="element__image">
+            <div class="element__content">
+              <h2 class="element__title">Камчатка</h2>
+              <button class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="/images/vladivostok.png" alt="Владивосток" class="element__image">
+            <div class="element__content">
+              <h2 class="element__title">Владивосток</h2>
+              <button class="element__like"></button>
+            </div>
+          </li>
         </ul>
-        </section>
+      </section>
     </main>
-    <section class="popup">        
-        <div class="popup__container">    
-          <img src="/images/Close Icon.svg" alt="закрыть окно" class="popup__close">      
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="popup__info" name="popup__info">
-          <input type="text" placeholder="Жак-Ив Кусто" class="popup__input popup__input-name" name="profile__name">
-          <input type="text" placeholder="Исследователь океана" class="popup__input popup__input-job" name="profile__job">
+    <section class="popup">
+      <div class="popup__container">
+        <img src="/images/Close Icon.svg" alt="закрыть окно" class="popup__close">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="popup__info" name="popup__info">
+          <input
+            type="text"
+            placeholder="Жак-Ив Кусто"
+            class="popup__input popup__input-name"
+            name="profile__name"
+          />
+          <input
+            type="text"
+            placeholder="Исследователь океана"
+            class="popup__input popup__input-job"
+            name="profile__job"
+          />
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
-        </div>
-      </section>  
-  <footer class="footer">
-    <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
-  </footer>
-</body>  
-<script type="text/javascript" src="./scripts/script.js"></script>
+      </div>
+    </section>
+    <footer class="footer">
+      <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
+    </footer>
+  </body>
+  <script type="text/javascript" src="./scripts/script.js"></script>
 </html>
