--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="/images/logo.svg" alt="логотип сайта" class="header__logo">
+      <img src="images/logo.svg" alt="логотип сайта" class="header__logo">
     </header>
     <main class="content">
       <section class="profile">
         <div class="profile__info-container">
-          <img src="/images/cousteau.png" alt="Кусто" class="profile__photo">
+          <img src="images/cousteau.png" alt="Кусто" class="profile__photo">
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button type="button" class="profile__button profile__open-popup"></button>
@@ -25,42 +25,42 @@
       <section class="mesto-elements">
         <ul class="elements">
           <li class="element">
-            <img src="/images/karachayevsk.png" alt="Карачаевск" class="element__image">
+            <img src="images/karachayevsk.png" alt="Карачаевск" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Карачаевск</h2>
-              <button <img src="/images/Group.svg" alt="кнопка лайк" class="element__like"></button>
+              <button <img src="images/Group.svg" alt="кнопка лайк" class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img src="/images/gora_elbrus.png" alt="Гора Эльбрус" class="element__image">
+            <img src="images/gora_elbrus.png" alt="Гора Эльбрус" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Гора Эльбрус</h2>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img src="/images/dombai.png" alt="Домбай" class="element__image">
+            <img src="images/dombai.png" alt="Домбай" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Домбай</h2>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img src="/images/Ruskeala.png" alt="Рускеала" class="element__image">
+            <img src="images/Ruskeala.png" alt="Рускеала" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Рускеала</h2>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img src="/images/Kamchatka.png" alt="Камчатка" class="element__image">
+            <img src="images/Kamchatka.png" alt="Камчатка" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Камчатка</h2>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img src="/images/vladivostok.png" alt="Владивосток" class="element__image">
+            <img src="images/vladivostok.png" alt="Владивосток" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Владивосток</h2>
               <button class="element__like"></button>
@@ -71,7 +71,7 @@
     </main>
     <section class="popup">
       <div class="popup__container">
-        <img src="/images/Close Icon.svg" alt="закрыть окно" class="popup__close">
+        <img src="images/Close Icon.svg" alt="закрыть окно" class="popup__close">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__info" name="popup__info">
           <input
