--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="profile__info-container">
           <img src="images/cousteau.png" alt="Кусто" class="profile__photo">
           <div class="profile__info">
-            <div class="profile__info_box">
+            <div class="profile__info-box">
                <h1 class="profile__title">Жак-Ив Кусто</h1>
                <button type="button" class="profile__button profile__open-popup"></button>
             </div>
@@ -80,12 +80,12 @@
             placeholder="Введите имя"
             class="popup__input popup__input_type_name"
             name="profile__name"
-          />
+          >
           <input      
             placeholder="Введите профессию"
             class="popup__input popup__input_type_job"
             name="profile__job"
-          />
+          >
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
       </div>
