--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
         </ul>
       </section>
     </main>
-    <section class="popup">
+    <footer class="footer">
+      <p class="footer__copyright">© 2020 Mesto Russia</p>
+    </footer>
+    <div class="popup">
       <div class="popup__container">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -89,10 +92,7 @@
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
       </div>
-    </section>
-    <footer class="footer">
-      <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
-    </footer>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>  
 </html>
