--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           <div class="profile__info">
             <div class="profile__info-box">
                <h1 class="profile__title">Жак-Ив Кусто</h1>
-               <button type="button" class="profile__button profile__open-popup"></button>
+               <button type="button" aria-label="кнопка открытия попапа" class="profile__button profile__open-popup"></button>
             </div>
             <p class="profile__subtitle">Исследователь океана</p>
           </div>
         </div>
-        <button type="button" class="profile__add-button"></button>
+        <button type="button" aria-label="кнопка добавления" class="profile__add-button"></button>
       </section>
       <section class="mesto-elements">
         <ul class="elements">
@@ -30,42 +30,42 @@
             <img src="images/karachayevsk.png" alt="Карачаевск" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Карачаевск</h2>
-              <button type="button" class="element__like"></button>
+              <button type="button" aria-label="поставить лайк" class="element__like"></button>
             </div>
           </li>
           <li class="element">
             <img src="images/gora_elbrus.png" alt="Гора Эльбрус" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Гора Эльбрус</h2>
-              <button type="button" class="element__like"></button>
+              <button type="button" aria-label="поставить лайк"  class="element__like"></button>
             </div>
           </li>
           <li class="element">
             <img src="images/dombai.png" alt="Домбай" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Домбай</h2>
-              <button type="button" class="element__like"></button>
+              <button type="button" aria-label="поставить лайк"  class="element__like"></button>
             </div>
           </li>
           <li class="element">
             <img src="images/Ruskeala.png" alt="Рускеала" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Рускеала</h2>
-              <button type="button" class="element__like"></button>
+              <button type="button" aria-label="поставить лайк"  class="element__like"></button>
             </div>
           </li>
           <li class="element">
             <img src="images/Kamchatka.png" alt="Камчатка" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Камчатка</h2>
-              <button type="button" class="element__like"></button>
+              <button type="button" aria-label="поставить лайк"  class="element__like"></button>
             </div>
           </li>
           <li class="element">
             <img src="images/vladivostok.png" alt="Владивосток" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Владивосток</h2>
-              <button type="button" class="element__like"></button>
+              <button type="button" aria-label="поставить лайк"  class="element__like"></button>
             </div>
           </li>
         </ul>
@@ -76,7 +76,7 @@
     </footer>
     <div class="popup">
       <div class="popup__container">
-        <button type="button" class="popup__close"></button>
+        <button type="button" aria-label="закрытие окна" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__info" name="popup__info">
           <input            
