--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto</title>
+    <base href="/">
   </head>
   <body class="page">
     <header class="header">
@@ -26,7 +27,7 @@
       </section>
       <section class="mesto-elements">
         <ul class="elements">
-          <li class="element">
+          <!--<li class="element">
             <img src="images/karachayevsk.png" alt="Карачаевск" class="element__image">
             <div class="element__content">
               <h2 class="element__title">Карачаевск</h2>
@@ -67,14 +68,14 @@
               <h2 class="element__title">Владивосток</h2>
               <button type="button" aria-label="поставить лайк"  class="element__like"></button>
             </div>
-          </li>
+          </li>-->
         </ul>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_type_profile">
       <div class="popup__container">
         <button type="button" aria-label="закрытие окна" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -93,6 +94,36 @@
         </form>
       </div>
     </div>
+    <div class="popup popup_type_add">
+      <div class="popup__container">
+        <button type="button" aria-label="закрытие окна" class="popup__close popup__close_add"></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form" name="popup__form">
+          <input placeholder="Название" class="popup__input popup__input_type_location" name="location">
+          <input placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link">
+          <button class="popup__button popup__submit" type="submit">Создать</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_image">
+      <div class="popup__container popup__container_image">
+        <button type="button" aria-label="закрытие окна" class="popup__close popup__close_image"></button>
+        <figure>
+          <img class="popup__img">
+          <figcaption class="popup__caption"></figcaption>
+        </figure>
+      </div>
+    </div>
+    <template class="element-template">
+      <li class="element">
+        <button class="element__delete" type="button" aria-label="удалить фото"></button>
+        <img class="element__image">
+        <div class="element__content">
+          <h2 class="element__title"></h2>
+          <button type="button" aria-label="поставить лайк" class="element__like"></button>
+        </div>
+      </li>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>  
 </html>
