--- a/index.html
+++ b/index.html
@@ -98,20 +98,18 @@
       <div class="popup__container">
         <button type="button" aria-label="закрытие окна" class="popup__close popup__close_add"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" name="popup__form">
-          <input placeholder="Название" class="popup__input popup__input_type_location" name="location">
-          <input placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link">
+        <form class="popup__form popup__info" name="popup__form">
+          <input placeholder="Название" class="popup__input popup__input_form popup__input_type_location" name="location">
+          <input placeholder="Ссылка на картинку" class="popup__input popup__input_form popup__input_type_link" name="link">
           <button class="popup__button popup__submit" type="submit">Создать</button>
         </form>
       </div>
     </div>
     <div class="popup popup_type_image">
       <div class="popup__container popup__container_image">
-        <button type="button" aria-label="закрытие окна" class="popup__close popup__close_image"></button>
-        <figure>
+        <button type="button" aria-label="закрытие окна" class="popup__close popup__close_image"></button>        
           <img class="popup__img">
-          <figcaption class="popup__caption"></figcaption>
-        </figure>
+          <p class="popup__caption"></p>        
       </div>
     </div>
     <template class="element-template">
