--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="images/logo.svg" alt="логотип сайта" class="header__logo">
+      <img src="/images/logo.svg" alt="логотип сайта" class="header__logo">
     </header>
     <main class="content">
       <section class="profile">
         <div class="profile__info-container">
-          <img src="images/cousteau.png" alt="Кусто" class="profile__photo">
+          <img src="/images/cousteau.png" alt="Кусто" class="profile__photo">
           <div class="profile__info">
             <div class="profile__info-box">
                <h1 class="profile__title">Жак-Ив Кусто</h1>
