--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="popup__container">
         <button type="button" aria-label="закрытие окна" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__info" name="popup__info">
+        <form class="popup__info popup__info_profile" name="popup__info">
           <input            
             placeholder="Введите имя"
             class="popup__input popup__input_type_name"
@@ -93,11 +93,11 @@
         </form>
       </div>
     </div>
-    <div class="popup popup_type_add">
+    <div class="popup popup_type_card">
       <div class="popup__container">
-        <button type="button" aria-label="закрытие окна" class="popup__close popup__close_add"></button>
+        <button type="button" aria-label="закрытие окна" class="popup__close popup__close_card"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form popup__info" name="popup__form">
+        <form class="popup__info_form popup__info" name="popup__form">
           <input placeholder="Название" class="popup__input popup__input_form popup__input_type_location" name="location">
           <input placeholder="Ссылка на картинку" class="popup__input popup__input_form popup__input_type_link" name="link">
           <button class="popup__button popup__submit" type="submit">Создать</button>
