--- a/index.html
+++ b/index.html
@@ -75,36 +75,48 @@
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
     <div class="popup popup_type_profile">
+      <div class="popup__overlay"></div>
       <div class="popup__container">
         <button type="button" aria-label="закрытие окна" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__info popup__info_profile" name="popup__info">
+        <form class="popup__info popup__info_profile" name="popup__info" novalidate>
           <input            
             placeholder="Введите имя"
             class="popup__input popup__input_type_name"
+            type="text"
             name="profile__name"
+            minlength="2" maxlength="40"
+            required
           >
+          <span class="popup__input-error"></span>
           <input      
             placeholder="Введите профессию"
-            class="popup__input popup__input_type_job"
+            class="popup__input popup__input_type_job" type="text"
             name="profile__job"
+            minlength="2" maxlength="200"
+            required
           >
-          <button class="popup__button" type="submit">Сохранить</button>
+          <span class="popup__input-error"></span>
+          <button class="popup__button" type="submit" disabled>Сохранить</button>
         </form>
       </div>
     </div>
     <div class="popup popup_type_card">
+      <div class="popup__overlay"></div>
       <div class="popup__container">
         <button type="button" aria-label="закрытие окна" class="popup__close popup__close_card"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__info_form popup__info" name="popup__form">
-          <input placeholder="Название" class="popup__input popup__input_form popup__input_type_location" name="location">
-          <input placeholder="Ссылка на картинку" class="popup__input popup__input_form popup__input_type_link" name="link">
-          <button class="popup__button popup__submit" type="submit">Создать</button>
+        <form class="popup__info_form popup__info" name="popup__form" novalidate>
+          <input placeholder="Название" class="popup__input popup__input_form popup__input_type_location" type="text" name="location" minlength="2" maxlength="30" required>
+          <span class="popup__input-error"></span>
+          <input placeholder="Ссылка на картинку" class="popup__input popup__input_form popup__input_type_link" name="link" type="url" pattern="https?://.+" required>
+          <span class="popup__input-error " ></span>
+          <button class="popup__button popup__submit" type="submit" disabled>Создать</button>
         </form>
       </div>
     </div>
-    <div class="popup popup_type_image">
+    <div class="popup popup_type_image" type="images">
+      <div class="popup__overlay popup__overlay_image"></div>
       <div class="popup__container popup__container_image">
         <button type="button" aria-label="закрытие окна" class="popup__close popup__close_image"></button>        
           <img class="popup__img">
@@ -121,6 +133,7 @@
         </div>
       </li>
     </template>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
   </body>  
 </html>
