--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="popup__container">
         <button type="button" aria-label="закрытие окна" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__info popup__info_profile" name="popup__info" novalidate>
+        <form class="popup__info popup__info_profile" data-id="profile" name="popup__info" novalidate>
           <input            
             placeholder="Введите имя"
             class="popup__input popup__input_type_name"
@@ -106,7 +106,7 @@
       <div class="popup__container">
         <button type="button" aria-label="закрытие окна" class="popup__close popup__close_card"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__info_form popup__info" name="popup__form" novalidate>
+        <form class="popup__info_form popup__info" name="popup__form" data-id="form" novalidate>
           <input placeholder="Название" class="popup__input popup__input_form popup__input_type_location" type="text" name="location" minlength="2" maxlength="30" required>
           <span class="popup__input-error"></span>
           <input placeholder="Ссылка на картинку" class="popup__input popup__input_form popup__input_type_link" name="link" type="url" pattern="https?://.+" required>
@@ -133,7 +133,7 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/validate.js"></script>
+    
     <script type="module" src="./scripts/index.js"></script>
   </body>  
 </html>
