--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/pages/index.css">
+    <!-- <link rel="stylesheet" href="../src/pages/index.css"> -->
     <title>Mesto</title>
   </head>
   <body class="page">
     <header class="header">
-      <img src="../images/logo.svg" alt="логотип сайта" class="header__logo">
+      <img src="<%=require('/src/images/logo.svg')%>" alt="логотип сайта" class="header__logo">
     </header>
     <main class="content">
       <section class="profile">
         <div class="profile__info-container">
-          <img src="../images/cousteau.png" alt="Кусто" class="profile__photo">
+          <img src="<%=require('/src/images/cousteau.png')%>" alt="Кусто" class="profile__photo">
           <div class="profile__info">
             <div class="profile__info-box">
                <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -134,6 +134,6 @@
       </li>
     </template>
     
-    <script type="module" src="../src/pages/index.js"></script>
+    <!--<script type="module" src="../src/pages/index.js"></script> -->
   </body>  
 </html>
