--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
             placeholder="Введите имя"
             class="popup__input popup__input_type_name"
             type="text"
-            name="profile__name"
+            name="name"
             minlength="2" maxlength="40"
             required
           >
@@ -92,7 +92,7 @@
           <input      
             placeholder="Введите профессию"
             class="popup__input popup__input_type_job" type="text"
-            name="profile__job"
+            name="profession"
             minlength="2" maxlength="200"
             required
           >
